--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
+  
   <head>
     <meta charset="UTF-8" />
     <title>Leonidas Esteban</title>
     <link rel="icon" type="image/png" href="images/favicon.png" />
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Source+Sans+Pro" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="css/media.css" media="screen and (max-width:768px)"> -->
     <link rel="stylesheet" href="css/estilos.css">
+    <meta name="viewport" content="width=device-width initial-scale=1">
   </head>
-  <body>
+  
+   <body>
     <header class="header">
       <div class="container">
         <figure class="logo">
@@ -28,14 +32,14 @@
         </nav>
       </div>
     </header>
-    <section class="hero">
+<!-- <section class="hero">
       <div class="container">
         <h1>
           Hola! Soy <strong>Leonidas Esteban</strong> <br/> Desarrollador  <strong>Javascript</strong> con <br> pasión por la <strong>enseñanza</strong>
         </h1>
         <img class="hero-image" src="images/hero.jpg" width="500" height="300" alt="imagen principal del sitio"> 
       </div>
-    </section>
+    </section>-->
     <section id="portafolio" class="portfolio">
       <div class="container">
         <h2>Portafolio (Proyectos Destacados)</h2>
@@ -67,13 +71,12 @@
             <img class="project-image" width="500" src="images/platzi-video-react-native.png" alt="prouyecto del curso de React Native">
           </figure>
         </article>
-      </div>
-      
+      </div> 
     </section>
-    <div class="container">
+    <!-- <div class="container">
       <h2 class="event-list-title">Más sobre mi experiencia</h2>
-    </div>
-    <section id="eventos" class="event-list">
+    </div > -->
+     <!-- <section id="eventos" class="event-list">
       <div class="container">
         <article class="event">
           <figure class="event-imageContainer">
@@ -116,8 +119,8 @@
           </div>
         </article>
       </div>
-    </section>
-    <section id="contacto" class="contact">
+    </section> -->
+    <!-- <section id="contacto" class="contact">
       <div class="container">
         <form action="/suscripcion/" class="form-email">
           <h3>¿Creamos algo juntos?</h3>
@@ -131,8 +134,8 @@
           <a href="https://instagram.com/leonidasesteban" class="social-link instagram"></a>
         </div>
       </div>
-    </section>
-    <footer class="footer">
+    </section>     -->
+    <!-- <footer class="footer">
       <div class="container">
         <div>
           <p>Curso de Desarrollo web online 2018 <img src="images/platzi.png" width="80" alt="platzi"></p>
@@ -143,6 +146,6 @@
           </p>
         </div>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
