Listo con la seccion de Hero

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         </nav>
       </div>
     </header>
-<!-- <section class="hero">
+    <section class="hero">
       <div class="container">
         <h1>
           Hola! Soy <strong>Leonidas Esteban</strong> <br/> Desarrollador  <strong>Javascript</strong> con <br> pasión por la <strong>enseñanza</strong>
         </h1>
         <img class="hero-image" src="images/hero.jpg" width="500" height="300" alt="imagen principal del sitio"> 
       </div>
-    </section>-->
+    </section>
     <section id="portafolio" class="portfolio">
       <div class="container">
         <h2>Portafolio (Proyectos Destacados)</h2>
@@ -138,7 +138,7 @@
     <footer class="footer">
       <div class="container">
         <div>
-          <p>Curso de Desarrollo web online 2018 <img src="images/platzi.png" width="80" alt="platzi"></p>
+          <p>Curso de Desarrollo web online 2018 <img class="img-platzi" src="images/platzi.png" width="80" alt="platzi"></p>
         </div>
         <div>
           <p>
