retoques en media queries del BKp 320inches

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header">
       <div class="container">
         <figure class="logo">
-          <img src="images/logo.png" height="50" alt="Logo de http://leonidasesteban.com" />
+          <img class="leo_img" src="images/logo.png" height="50" alt="Logo de http://leonidasesteban.com" />
         </figure>
         <nav class="menu">
           <ol>
