--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   </head>
   
    <body>
-    <header class="header">
+     <i class="icon-menu burger-button" id="burger-menu"></i>
+     <header class="header">
       <div class="container">
         <figure class="logo">
           <img class="leo_img" src="images/logo.png" height="50" alt="Logo de http://leonidasesteban.com" />
@@ -76,7 +77,7 @@
     <div class="container">
       <h2 class="event-list-title">Más sobre mi experiencia</h2>
     </div >
-     <section id="eventos" class="event-list">
+    <section id="eventos" class="event-list">
       <div class="container">
         <article class="event">
           <figure class="event-imageContainer">
@@ -90,7 +91,8 @@
         </article>
         <article class="event">
           <figure class="event-imageContainer">
-            <img class="event-image" src="images/platzi-conf.jpg" width="500" />
+            <video class="html-video" src="videos/f8.mp4" width="1280" height="720" controls></video>
+            <!-- <img class="event-image" src="images/platzi-conf.jpg" width="500" /> -->
           </figure>
           <div class="event-detail">
             <h3 class="event-title">PlatziConf México 2018</h3>
@@ -110,7 +112,10 @@
         </article>
         <article class="event">
           <figure class="event-imageContainer">
-            <img class="event-image" src="images/platzi-conf.jpg" width="500" />
+            <div class="flexible-video">
+              <iframe class="youtube-video" width="560" height="315" src="https://www.youtube.com/embed/LoKvxCSZw5w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <!-- <img class="event-image" src="images/platzi-conf.jpg" width="500" /> -->
           </figure>
           <div class="event-detail">
             <h3 class="event-title">PlatziConf México 2018</h3>
@@ -147,5 +152,36 @@
         </div>
       </div>
     </footer>
+    <script>
+      
+      const iPad = window.matchMedia('screen and (max-width:767px');
+      const menu = document.querySelector('.menu');
+      const burgerButton = document.querySelector('#burger-menu');
+      iPad.addListener(validation);
+
+      function validation(event){
+        if (event.matches){
+          console.log("Cargado listener de evento click");
+          burgerButton.addEventListener('click', hideShow);
+          console.log(event.matches);
+        }
+        else{
+          burgerButton.removeEventListener('click', hideShow);
+          console.log("Se quito")
+          console.log(event.matches);
+        }
+      }
+
+      function hideShow(){
+        if (menu.classList.contains('is-active')){
+          menu.classList.remove('is-active');
+        }else{
+          menu.classList.add('is-active');
+        }
+      }
+
+      
+
+    </script>
   </body>
 </html>
